Updates on Bootstrap

--- a/Practica-04-Bootstrap/estilo.css
+++ b/Practica-04-Bootstrap/estilo.css
@@ -1,6 +1,5 @@
 .contenedor {
     background-color: #d40655;
     color: white;
-    font-size: 50px;
-    border: 2px solid #640328;
+    margin: 2px white;
 }
